chore: move machine-json-rpc to separate repo

--- a/offchain/Cargo.toml
+++ b/offchain/Cargo.toml
@@ -1,11 +1,12 @@
 [workspace]
 resolver = "2"
 members = [
-    "machine-json-rpc",
     "core",
     "coordinator",
     "input-reader",
     "simulator",
+    "cryptography",
+    "machine",
 ]
 
 [workspace.package]
