--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "permissionless-arbitration/contracts/lib/forge-std"]
 	path = permissionless-arbitration/contracts/lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "machine-json-rpc"]
+	path = machine-json-rpc
+	url = git@github.com:cartesi/machine-json-rpc.git
