--- a/offchain/machine/Cargo.toml
+++ b/offchain/machine/Cargo.toml
@@ -18,3 +18,4 @@ async-mutex = "1.4.0"
 sha3 = "0.10.8"
 async-trait = "0.1.74"
 jsonrpsee = {version = "0.18.2", features=["jsonrpsee-http-client"]}
+cartesi-compute-core = { path = "../core" }
