--- a/offchain/core/Cargo.toml
+++ b/offchain/core/Cargo.toml
@@ -14,6 +14,7 @@ primitive-types = "0.12.1"
 sha3 = "0.10.8"
 serde_json = "1.0.107"
 cartesi-machine-json-rpc = { path = "../../machine-json-rpc" }
+thiserror = "1.0.50"
 
 [build-dependencies]
 ethers-contract-abigen = "2.0.8"
