--- a/offchain/core/Cargo.toml
+++ b/offchain/core/Cargo.toml
@@ -5,15 +5,17 @@ edition = "2021"
 build = "build.rs"
 
 [dependencies]
-log = "0.4"
-tokio = { version = "1.29.1", features = ["full"] }
-ethers = "2.0.8"
+cartesi-machine-json-rpc = { path = "../../machine-json-rpc" }
+async-recursion = { workspace = true }
+async-trait = { workspace = true }
+ethers = { workspace = true }
+tokio = { workspace = true }
 hex = "0.4.3"
-async-trait = "0.1.72"
+log = "0.4"
 primitive-types = "0.12.1"
 sha3 = "0.10.8"
 serde_json = "1.0.107"
-cartesi-machine-json-rpc = { path = "../../machine-json-rpc" }
+serde = "1"
 thiserror = "1.0.50"
 
 [build-dependencies]
