--- a/permissionless-arbitration/lua_node/Dockerfile
+++ b/permissionless-arbitration/lua_node/Dockerfile
@@ -1,4 +1,4 @@
-FROM cartesi/machine-emulator:main
+FROM cartesi/machine-emulator:0.15.2
 
 USER 0
 RUN apt-get -y update; apt-get -y install curl git; apt-get install -y procps
