feat(offchain): add `dave-compute` executable

--- a/offchain/Cargo.toml
+++ b/offchain/Cargo.toml
@@ -2,11 +2,9 @@
 resolver = "2"
 members = [
     "core",
-    "coordinator",
-    "input-reader",
     "dave-compute",
     "dave-rollups",
-    "simulator",
+    "input-reader",
 ]
 
 [workspace.package]
@@ -26,8 +24,8 @@ repository = "https://github.com/cartesi/dave"
 
 [workspace.dependencies]
 async-recursion = "1"
-async-mutex = "1.4.0"
 async-trait = "0.1.74"
-ethers = "2.0.10"
+ethers = "2.0.11"
 futures = "0.3"
+log = "0.4"
 tokio = { version = "1", features = ["full"] }
