--- a/offchain/core/Cargo.toml
+++ b/offchain/core/Cargo.toml
@@ -10,14 +10,13 @@ async-recursion = { workspace = true }
 async-trait = { workspace = true }
 ethers = { workspace = true }
 tokio = { workspace = true }
+log = { workspace = true }
 hex = "0.4.3"
-log = "0.4"
-primitive-types = "0.12.1"
 sha3 = "0.10.8"
 serde_json = "1.0.107"
 serde = "1"
 thiserror = "1.0.50"
 
 [build-dependencies]
-ethers-contract-abigen = "2.0.8"
-ethers-solc = "2.0.8"
+ethers-contract-abigen = "2.0.11"
+ethers-solc = "2.0.11"
