chore(offchain): remove unused crates

--- a/offchain/input-reader/Cargo.toml
+++ b/offchain/input-reader/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "dave-input-reader"
+name = "rollups-input-reader"
 version = { workspace = true }
 
 authors = { workspace = true }
