--- a/offchain/core/Cargo.toml
+++ b/offchain/core/Cargo.toml
@@ -9,8 +9,8 @@ cartesi-machine-json-rpc = { path = "../../machine-json-rpc" }
 async-recursion = { workspace = true }
 async-trait = { workspace = true }
 ethers = { workspace = true }
-tokio = { workspace = true }
 log = { workspace = true }
+base64 = "0.21.3"
 hex = "0.4.3"
 sha3 = "0.10.8"
 serde_json = "1.0.107"
@@ -19,4 +19,3 @@ thiserror = "1.0.50"
 
 [build-dependencies]
 ethers-contract-abigen = "2.0.11"
-ethers-solc = "2.0.11"
