--- a/offchain/core/Cargo.toml
+++ b/offchain/core/Cargo.toml
@@ -18,4 +18,7 @@ serde = "1"
 thiserror = "1.0.50"
 
 [build-dependencies]
+convert_case = "0.6.0"
 ethers-contract-abigen = "2.0.11"
+foundry-compilers = "0.1.3"
+serde_json = "1.0.107"
