--- a/machine-bindings/cartesi-machine/Cargo.toml
+++ b/machine-bindings/cartesi-machine/Cargo.toml
@@ -8,3 +8,5 @@ edition = "2021"
 [dependencies]
 cartesi-machine-sys = { path = "../cartesi-machine-sys" }
 hex = "0.4.3"
+num-traits = "0.2"
+num-derive = "0.4"
