chore: cleanup README

--- a/permissionless-arbitration/lua_node/Dockerfile
+++ b/permissionless-arbitration/lua_node/Dockerfile
@@ -5,6 +5,13 @@ RUN apt-get -y update; apt-get -y install curl git; apt-get install -y procps xx
 RUN curl -sSL https://github.com/foundry-rs/foundry/releases/download/nightly-5b7e4cb3c882b28f3c32ba580de27ce7381f415a/foundry_nightly_linux_$(dpkg --print-architecture).tar.gz | \
     tar -zx -C /usr/local/bin
 
+# prepare debootstrap machine
+WORKDIR "/app/lua_node/program"
+# RUN curl -sSL https://github.com/cartesi/dave/releases/download/v0.0.1-rc-test/debootstrap-machine-sparsed.tar.gz | \
+#     tar -zx -C "/app/lua_node/program"
+COPY ./permissionless-arbitration/measure_constants/program/debootstrap-machine-sparsed.tar.gz ./debootstrap-machine-sparsed.tar.gz
+RUN tar -zxf ./debootstrap-machine-sparsed.tar.gz
+
 WORKDIR "/machine-emulator-sdk"
 ADD ./machine-emulator-sdk/ .
 
@@ -18,6 +25,7 @@ RUN forge build
 
 ADD ./permissionless-arbitration/contracts/deploy_anvil.sh .
 
+# prepare simple machine
 WORKDIR "/app/lua_node"
 
 COPY ./permissionless-arbitration/lua_node/ .
