--- a/offchain/core/Cargo.toml
+++ b/offchain/core/Cargo.toml
@@ -5,7 +5,8 @@ edition = "2021"
 build = "build.rs"
 
 [dependencies]
-cartesi-machine-json-rpc = { path = "../../machine-json-rpc" }
+cartesi-machine = { path = "../../machine-bindings/cartesi-machine" }
+cartesi-machine-sys = { path = "../../machine-bindings/cartesi-machine-sys" }
 async-recursion = { workspace = true }
 async-trait = { workspace = true }
 ethers = { workspace = true }
