--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "prt/contracts/lib/forge-std"]
 	path = prt/contracts/lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "machine/machine-emulator"]
+	path = machine/machine-emulator
+	url = https://github.com/cartesi/machine-emulator
