feat: get rid of `Box<dyn Error>`

--- a/offchain/input-reader/Cargo.toml
+++ b/offchain/input-reader/Cargo.toml
@@ -11,6 +11,7 @@ readme = { workspace = true }
 repository = { workspace = true }
 
 [dependencies]
+anyhow = { workspace = true }
 async-recursion = { workspace = true }
 ethers = { workspace = true }
 futures = { workspace = true }
