--- a/offchain/Cargo.toml
+++ b/offchain/Cargo.toml
@@ -22,6 +22,7 @@ readme = "README.md"
 repository = "https://github.com/cartesi/dave"
 
 [workspace.dependencies]
+anyhow = "1.0.63"
 async-recursion = "1"
 async-trait = "0.1.74"
 ethers = "2.0.11"
