--- a/offchain/core/Cargo.toml
+++ b/offchain/core/Cargo.toml
@@ -7,6 +7,7 @@ build = "build.rs"
 [dependencies]
 cartesi-machine = { path = "../../machine-bindings/cartesi-machine" }
 cartesi-machine-sys = { path = "../../machine-bindings/cartesi-machine-sys" }
+anyhow = { workspace = true }
 async-recursion = { workspace = true }
 async-trait = { workspace = true }
 ethers = { workspace = true }
