--- a/offchain/dave-compute/Cargo.toml
+++ b/offchain/dave-compute/Cargo.toml
@@ -12,6 +12,7 @@ repository = { workspace = true }
 
 [dependencies]
 cartesi-compute-core = { path = "../core" }
+anyhow = { workspace = true }
 ethers = { workspace = true }
 tokio = { workspace = true }
 log = { workspace = true }
