--- a/offchain/Cargo.toml
+++ b/offchain/Cargo.toml
@@ -3,7 +3,7 @@ resolver = "2"
 members = [
     "dave-advance",
     "input-query",
-    "input-manager",
+    "state-manager",
     "input-reader",
 ]
 
