--- a/permissionless-arbitration/lua_node/Dockerfile
+++ b/permissionless-arbitration/lua_node/Dockerfile
@@ -7,10 +7,16 @@ RUN curl -sSL https://github.com/foundry-rs/foundry/releases/download/nightly-5b
 
 # prepare debootstrap machine
 WORKDIR "/app/lua_node/program"
-# RUN curl -sSL https://github.com/cartesi/dave/releases/download/v0.0.1-rc-test/debootstrap-machine-sparsed.tar.gz | \
-#     tar -zx -C "/app/lua_node/program"
-COPY ./permissionless-arbitration/measure_constants/program/debootstrap-machine-sparsed.tar.gz ./debootstrap-machine-sparsed.tar.gz
-RUN tar -zxf ./debootstrap-machine-sparsed.tar.gz
+RUN curl -sSL https://github.com/cartesi/dave/releases/download/v0.0.2-rc-test/debootstrap-machine-sparsed.tar.gz | \
+    tar -zx -C "/app/lua_node/program"
+
+# prepare doom-showcase machine
+RUN curl -sSL https://github.com/cartesi/dave/releases/download/v0.0.3-rc-test/doom-compute-machine.tar.gz | \
+    tar -zx -C "/app/lua_node/program"
+
+# prepare simple machine
+RUN curl -sSL https://github.com/cartesi/dave/releases/download/v0.0.4-rc-test/simple-program.tar.gz | \
+    tar -zx -C "/app/lua_node/program"
 
 WORKDIR "/machine-emulator-sdk"
 ADD ./machine-emulator-sdk/ .
@@ -25,13 +31,10 @@ RUN forge build
 
 ADD ./permissionless-arbitration/contracts/deploy_anvil.sh .
 
-# prepare simple machine
 WORKDIR "/app/lua_node"
 
 COPY ./permissionless-arbitration/lua_node/ .
 RUN chmod +x multiplayers_entrypoint.lua
-WORKDIR "/app/lua_node/program"
-RUN ./gen_machine_simple.sh
 
 WORKDIR "/app"
 ENTRYPOINT ["./lua_node/multiplayers_entrypoint.lua"]
