--- a/permissionless-arbitration/measure_constants/Dockerfile
+++ b/permissionless-arbitration/measure_constants/Dockerfile
@@ -6,11 +6,17 @@ RUN apt-get update && \
 
 WORKDIR "/app"
 
-# RUN curl -sSL https://web3.link/debootstrap-machine-sparsed.tar.gz | \
-#     tar -zx
+# prepare debootstrap machine
+RUN curl -sSL https://github.com/cartesi/dave/releases/download/v0.0.2-rc-test/debootstrap-machine-sparsed.tar.gz | \
+    tar -zx -C "/app"
 
-COPY program/debootstrap-machine-sparsed.tar.gz .
-RUN tar -zxf debootstrap-machine-sparsed.tar.gz
+# prepare doom-showcase machine
+RUN curl -sSL https://github.com/cartesi/dave/releases/download/v0.0.3-rc-test/doom-compute-machine.tar.gz | \
+    tar -zx -C "/app"
+
+# prepare simple machine
+RUN curl -sSL https://github.com/cartesi/dave/releases/download/v0.0.4-rc-test/simple-program.tar.gz | \
+    tar -zx -C "/app"
 
 COPY chronos.c .
 COPY Makefile .
