--- a/permissionless-arbitration/lua_node/Dockerfile
+++ b/permissionless-arbitration/lua_node/Dockerfile
@@ -1,7 +1,8 @@
 FROM cartesi/machine-emulator:0.17.0
 
 USER 0
-RUN apt-get -y update; apt-get -y install curl git; apt-get install -y procps xxd
+RUN apt-get -y update && \
+    apt-get -y install curl gcc imagemagick make procps xxd
 RUN curl -sSL https://github.com/foundry-rs/foundry/releases/download/nightly-5b7e4cb3c882b28f3c32ba580de27ce7381f415a/foundry_nightly_linux_$(dpkg --print-architecture).tar.gz | \
     tar -zx -C /usr/local/bin
 
@@ -34,7 +35,10 @@ ADD ./permissionless-arbitration/contracts/deploy_anvil.sh .
 WORKDIR "/app/lua_node"
 
 COPY ./permissionless-arbitration/lua_node/ .
-RUN chmod +x multiplayers_entrypoint.lua
+RUN chmod +x dave-test-entrypoint.sh
+RUN chmod +x self_contained_entrypoint.lua
+RUN chmod +x doom_showcase/process_doom_graphics.lua
 
 WORKDIR "/app"
-ENTRYPOINT ["./lua_node/multiplayers_entrypoint.lua"]
+RUN mkdir -p snapshots
+ENTRYPOINT ["./lua_node/dave-test-entrypoint.sh"]
