--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,6 @@ node_modules
 .DS_Store
 **/.idea/
 target/
+snapshots/
 offchain/core/src/contract/*tournament.rs
 permissionless-arbitration/machine-emulator-sdk
