feat!: dave-rollups work - rename `offchain` to `rollups-node` - rename `input-reader` to `blockchain-reader` - rewrite `machine-runner` to adapt `machine-emulator 0.17.0` - rewrite `StateManager` to use sqlite - add `start` signatures (no body)

--- a/rollups-node/Cargo.toml
+++ b/rollups-node/Cargo.toml
@@ -1,13 +1,9 @@
 [workspace]
 resolver = "2"
 members = [
-    "core",
-    "dave-advance",
-    "dave-compute",
-    "dave-rollups",
-    "input-query",
+    "blockchain-reader",
+    "machine-runner",
     "state-manager",
-    "input-reader",
 ]
 
 [workspace.package]
