--- a/rollups-node/blockchain-reader/Cargo.toml
+++ b/rollups-node/blockchain-reader/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "rollups-input-reader"
+name = "rollups-blockchain-reader"
 version = { workspace = true }
 
 authors = { workspace = true }
@@ -11,11 +11,11 @@ readme = { workspace = true }
 repository = { workspace = true }
 
 [dependencies]
+rollups-state-manager = { path = "../state-manager" }
 anyhow = { workspace = true }
 async-recursion = { workspace = true }
-cartesi-rollups-contracts = "2.0.0-rc.1"
 ethers = { workspace = true }
-ethers-contract = "2.0.13"
 futures = { workspace = true }
-serde = "1.0.197"
 tokio = { workspace = true }
+ethers-contract = "2.0.13"
+serde = "1.0.197"
