--- a/rollups-node/machine-runner/Cargo.toml
+++ b/rollups-node/machine-runner/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "dave-advance"
+name = "rollups-machine-runner"
 version.workspace = true
 authors.workspace = true
 description.workspace = true
@@ -10,9 +10,5 @@ readme.workspace = true
 repository.workspace = true
 
 [dependencies]
-ethers.workspace = true
 cartesi-machine = { path = "../../machine-bindings/cartesi-machine" }
-tokio = { workspace = true }
-base64 = "0.21.3"
-hex = "0.4.3"
-serde_json = "1.0.100"
+rollups-state-manager = { path = "../state-manager" }
