--- a/rollups-node/state-manager/Cargo.toml
+++ b/rollups-node/state-manager/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "dave-compute"
+name = "rollups-state-manager"
 version = { workspace = true }
 
 authors = { workspace = true }
@@ -11,9 +11,5 @@ readme = { workspace = true }
 repository = { workspace = true }
 
 [dependencies]
-cartesi-compute-core = { path = "../core" }
-anyhow = { workspace = true }
-ethers = { workspace = true }
-tokio = { workspace = true }
-log = { workspace = true }
-env_logger = "0.10"
+anyhow = "1.0.6"
+sqlite = "0.33.0"
