feat: implement `start` of `machine-runner`

--- a/rollups-node/machine-runner/Cargo.toml
+++ b/rollups-node/machine-runner/Cargo.toml
@@ -12,3 +12,4 @@ repository.workspace = true
 [dependencies]
 cartesi-machine = { path = "../../machine-bindings/cartesi-machine" }
 rollups-state-manager = { path = "../state-manager" }
+anyhow = "1.0.6"
