--- a/rollups-node/Cargo.toml
+++ b/rollups-node/Cargo.toml
@@ -10,8 +10,7 @@ members = [
 version = "0.1.0"
 
 authors = [
-  "Gabriel Coutinho de Paula <gcdepaula@protonmail.io>",
-  "Algebraic Sofia <sofia@algebraic.dev>",
+  "Gabriel Coutinho de Paula <gcdepaula@protonmail.com>",
   "Stephen Chen <stephenx747@gmail.com>",
 ]
 description = "A Cartesi validator reference implementation"
@@ -22,7 +21,11 @@ readme = "README.md"
 repository = "https://github.com/cartesi/dave"
 
 [workspace.dependencies]
-anyhow = "1.0.63"
+rollups-state-manager = { version = "0.1", path = "state-manager" }
+
+cartesi-machine = { path = "../machine/machine-rust-bindings/cartesi-machine" }
+
+anyhow = "1.0"
 async-recursion = "1"
 async-trait = "0.1.74"
 ethers = "2.0.11"
