--- a/rollups-node/state-manager/Cargo.toml
+++ b/rollups-node/state-manager/Cargo.toml
@@ -12,4 +12,4 @@ repository = { workspace = true }
 
 [dependencies]
 anyhow = "1.0.6"
-sqlite = "0.33.0"
+rusqlite = { version = "0.31.0", features = ["bundled"] }
