feat: use `rusqlite_migration`

--- a/rollups-node/state-manager/Cargo.toml
+++ b/rollups-node/state-manager/Cargo.toml
@@ -13,3 +13,4 @@ repository = { workspace = true }
 [dependencies]
 anyhow = "1.0.6"
 rusqlite = { version = "0.31.0", features = ["bundled"] }
+rusqlite_migration = "1.2.0"
