--- a/rollups-node/blockchain-reader/Cargo.toml
+++ b/rollups-node/blockchain-reader/Cargo.toml
@@ -14,6 +14,7 @@ repository = { workspace = true }
 rollups-state-manager = { path = "../state-manager" }
 anyhow = { workspace = true }
 async-recursion = { workspace = true }
+cartesi-rollups-contracts = { workspace = true }
 ethers = { workspace = true }
 futures = { workspace = true }
 tokio = { workspace = true }
