Refactor state-manager
Create dedicated input, input id, and epoch types.
Make latest_block, inputs and epochs atomic writes.
Use thiserror instead of anyhow.

--- a/rollups-node/state-manager/Cargo.toml
+++ b/rollups-node/state-manager/Cargo.toml
@@ -11,6 +11,8 @@ readme = { workspace = true }
 repository = { workspace = true }
 
 [dependencies]
-anyhow = "1.0.6"
 rusqlite = { version = "0.31.0", features = ["bundled"] }
 rusqlite_migration = "1.2.0"
+
+lazy_static = "1.4.0"
+thiserror = { workspace = true }
