--- a/rollups-node/Cargo.toml
+++ b/rollups-node/Cargo.toml
@@ -31,4 +31,5 @@ async-trait = "0.1.74"
 ethers = "2.0.11"
 futures = "0.3"
 log = "0.4"
+thiserror = "1.0"
 tokio = { version = "1", features = ["full"] }
