feat: refactor `blockchain-reader` - remove `concurrency` and `semaphore` - update `start` method - simplify struct fields - fix inclusiveness of `get_events` - add `AddressBook` type - add proper `error` type - use `tokio::time::sleep`

--- a/rollups-node/blockchain-reader/Cargo.toml
+++ b/rollups-node/blockchain-reader/Cargo.toml
@@ -12,11 +12,8 @@ repository = { workspace = true }
 
 [dependencies]
 rollups-state-manager = { path = "../state-manager" }
-anyhow = { workspace = true }
 async-recursion = { workspace = true }
 cartesi-rollups-contracts = { workspace = true }
 ethers = { workspace = true }
-futures = { workspace = true }
+thiserror = { workspace = true }
 tokio = { workspace = true }
-ethers-contract = "2.0.13"
-serde = "1.0.197"
