--- a/.gitmodules
+++ b/.gitmodules
@@ -5,5 +5,11 @@
 	path = prt/contracts/lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
 [submodule "machine/machine-emulator"]
-	path = machine/machine-emulator
+	path = machine/emulator/
 	url = https://github.com/cartesi/machine-emulator
+[submodule "cartesi-rollups/contracts/lib/forge-std"]
+	path = cartesi-rollups/contracts/lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
+[submodule "cartesi-rollups/contracts/lib/rollups-contracts"]
+	path = cartesi-rollups/contracts/lib/rollups-contracts
+	url = https://github.com/cartesi/rollups-contracts
