--- a/prt/compute-rs/Cargo.toml
+++ b/prt/compute-rs/Cargo.toml
@@ -21,6 +21,7 @@ readme = "README.md"
 repository = "https://github.com/cartesi/dave"
 
 [workspace.dependencies]
+cartesi-machine = { path = "../../machine/machine-rust-bindings/cartesi-machine" }
 anyhow = "1.0.63"
 async-recursion = "1"
 async-trait = "0.1.74"
