--- a/prt/compute-rs/Dockerfile.compute.test
+++ b/prt/compute-rs/Dockerfile.compute.test
@@ -1,4 +1,4 @@
-FROM rust:1.74.0-bookworm AS chef
+FROM rust:1.78.0-bookworm AS chef
 
 ENV CARGO_REGISTRIES_CARTESI_INDEX=https://github.com/cartesi/crates-index
 RUN rustup component add rustfmt
@@ -7,14 +7,14 @@ RUN apt-get update && \
     apt-get install -y clang libslirp0
 
 FROM chef AS planner
-COPY ./machine-bindings /app/machine-bindings
+COPY ./machine/machine-rust-bindings /app/machine/machine-rust-bindings
 COPY ./prt/compute-rs /app/prt/compute-rs
 
 WORKDIR /app/prt/compute-rs
 RUN cargo chef prepare --recipe-path recipe.json
 
 FROM chef AS builder
-COPY ./machine-bindings /app/machine-bindings
+COPY ./machine /app/machine
 COPY --from=planner /app/prt/compute-rs/recipe.json /app/prt/compute-rs/recipe.json
 
 # Build dependencies - this is the caching Docker layer!
@@ -24,7 +24,6 @@ RUN cargo chef cook --release --recipe-path recipe.json
 # Build application
 COPY --from=ethereum/solc:0.8.23 /usr/bin/solc /usr/bin/solc
 RUN chmod u+x /usr/bin/solc
-COPY --from=cartesi/machine-emulator:0.17.0 /lib/libcartesi* /lib
 
 COPY ./machine-emulator-sdk /app/machine-emulator-sdk
 COPY ./prt /app/prt
