--- a/prt/compute-rs/core/Cargo.toml
+++ b/prt/compute-rs/core/Cargo.toml
@@ -5,14 +5,12 @@ edition = "2021"
 build = "build.rs"
 
 [dependencies]
-cartesi-machine = { path = "../../../machine-bindings/cartesi-machine" }
-cartesi-machine-sys = { path = "../../../machine-bindings/cartesi-machine-sys" }
+cartesi-machine = { workspace = true }
 anyhow = { workspace = true }
 async-recursion = { workspace = true }
 async-trait = { workspace = true }
 ethers = { workspace = true }
 log = { workspace = true }
-base64 = "0.21.3"
 hex = "0.4.3"
 sha3 = "0.10.8"
 thiserror = "1.0.50"
