feat: implement computation hash functionality

--- a/rollups-node/Cargo.toml
+++ b/rollups-node/Cargo.toml
@@ -24,6 +24,7 @@ repository = "https://github.com/cartesi/dave"
 rollups-state-manager = { version = "0.1", path = "state-manager" }
 
 cartesi-machine = { path = "../machine/machine-rust-bindings/cartesi-machine" }
+cartesi-compute-core = { path = "../prt/compute-rs/core" }
 
 anyhow = "1.0"
 async-recursion = "1"
