--- a/rollups-node/machine-runner/Cargo.toml
+++ b/rollups-node/machine-runner/Cargo.toml
@@ -11,7 +11,8 @@ repository.workspace = true
 
 [dependencies]
 cartesi-compute-core = { workspace = true }
+cartesi-machine = { workspace = true }
 rollups-state-manager = { workspace = true }
 
-cartesi-machine = { workspace = true }
 anyhow = { workspace = true }
+tokio = { workspace = true }
