feat: enhance error of `blockchain-reader` and `machine-runner`

--- a/rollups-node/machine-runner/Cargo.toml
+++ b/rollups-node/machine-runner/Cargo.toml
@@ -14,5 +14,5 @@ cartesi-compute-core = { workspace = true }
 cartesi-machine = { workspace = true }
 rollups-state-manager = { workspace = true }
 
-anyhow = { workspace = true }
+thiserror = { workspace = true }
 tokio = { workspace = true }
