--- a/rollups-node/epoch-manager/Cargo.toml
+++ b/rollups-node/epoch-manager/Cargo.toml
@@ -12,4 +12,5 @@ repository.workspace = true
 [dependencies]
 rollups-state-manager = { workspace = true }
 anyhow = { workspace = true }
+ethers = { workspace = true }
 tokio = { workspace = true }
