--- a/rollups-node/Cargo.toml
+++ b/rollups-node/Cargo.toml
@@ -35,6 +35,7 @@ anyhow = "1.0"
 async-recursion = "1"
 async-trait = "0.1.74"
 cartesi-rollups-contracts = "2.0.0-rc.1"
+clap = { version = "4.5.7", features = ["derive", "env"] }
 ethers = "2.0.11"
 futures = "0.3"
 log = "0.4"
