--- a/rollups-node/dave-rollups/Cargo.toml
+++ b/rollups-node/dave-rollups/Cargo.toml
@@ -19,9 +19,11 @@ rollups-state-manager = { workspace = true }
 cartesi-rollups-contracts = { workspace = true }
 
 anyhow = { workspace = true }
+clap = { workspace = true }
 ethers = { workspace = true }
 futures = { workspace = true }
 tokio = { workspace = true }
 log = { workspace = true }
 rusqlite = { version = "0.31.0", features = ["bundled"] }
+clap_derive = "=4.5.5"
 env_logger = "0.10"
