--- a/.gitmodules
+++ b/.gitmodules
@@ -4,12 +4,18 @@
 [submodule "prt/contracts/lib/forge-std"]
 	path = prt/contracts/lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
-[submodule "machine/machine-emulator"]
-	path = machine/emulator/
+[submodule "machine/emulator"]
+	path = machine/emulator
 	url = https://github.com/cartesi/machine-emulator
 [submodule "cartesi-rollups/contracts/lib/forge-std"]
 	path = cartesi-rollups/contracts/lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
 [submodule "cartesi-rollups/contracts/lib/rollups-contracts"]
 	path = cartesi-rollups/contracts/lib/rollups-contracts
+	url = https://github.com/cartesi/rollups-contracts
+[submodule "rollups/contracts/lib/forge-std"]
+	path = rollups/contracts/lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
+[submodule "rollups/contracts/lib/rollups-contracts"]
+	path = rollups/contracts/lib/rollups-contracts
 	url = https://github.com/cartesi/rollups-contracts
