--- a/prt/prt-rs/Dockerfile.compute.test
+++ b/prt/prt-rs/Dockerfile.compute.test
@@ -8,17 +8,17 @@ RUN apt-get update && \
 
 FROM chef AS planner
 COPY ./machine/machine-rust-bindings /app/machine/machine-rust-bindings
-COPY ./prt/compute-rs /app/prt/compute-rs
+COPY ./prt/prt-rs /app/prt/prt-rs
 
-WORKDIR /app/prt/compute-rs
+WORKDIR /app/prt/prt-rs
 RUN cargo chef prepare --recipe-path recipe.json
 
 FROM chef AS builder
 COPY ./machine /app/machine
-COPY --from=planner /app/prt/compute-rs/recipe.json /app/prt/compute-rs/recipe.json
+COPY --from=planner /app/prt/prt-rs/recipe.json /app/prt/prt-rs/recipe.json
 
 # Build dependencies - this is the caching Docker layer!
-WORKDIR /app/prt/compute-rs
+WORKDIR /app/prt/prt-rs
 RUN cargo chef cook --release --recipe-path recipe.json
 
 # Build application
@@ -28,8 +28,8 @@ RUN chmod u+x /usr/bin/solc
 COPY ./machine-emulator-sdk /app/machine-emulator-sdk
 COPY ./prt /app/prt
 
-WORKDIR /app/prt/compute-rs
-RUN cargo build --release --bin dave-compute
+WORKDIR /app/prt/prt-rs
+RUN cargo build --release --bin cartesi-prt-compute
 
 FROM --platform=linux/amd64 cartesi/machine-emulator:0.17.0
 
@@ -55,7 +55,7 @@ RUN curl -sSL https://github.com/cartesi/dave/releases/download/v0.0.7-rc-test/s
 
 COPY ./machine-emulator-sdk /root/machine-emulator-sdk
 COPY ./prt /root/prt
-COPY --from=builder /app/prt/compute-rs/target/release/dave-compute /root/prt/compute-rs/target/release/dave-compute
+COPY --from=builder /app/prt/prt-rs/target/release/cartesi-prt-compute /root/prt/prt-rs/target/release/cartesi-prt-compute
 
 WORKDIR /root/prt/contracts
 RUN forge --version
@@ -64,4 +64,4 @@ RUN forge build
 WORKDIR /root/prt
 RUN chmod +x /root/prt/lua_poc/attached_entrypoint.lua
 
-ENTRYPOINT [ "compute-rs/compute-test-entrypoint.sh" ]
+ENTRYPOINT [ "prt-rs/compute-test-entrypoint.sh" ]
