--- a/prt/prt-rs/compute/Cargo.toml
+++ b/prt/prt-rs/compute/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "dave-compute"
+name = "cartesi-prt-compute"
 version = { workspace = true }
 
 authors = { workspace = true }
@@ -11,7 +11,7 @@ readme = { workspace = true }
 repository = { workspace = true }
 
 [dependencies]
-cartesi-compute-core = { path = "../core" }
+cartesi-prt-core = { path = "../core" }
 anyhow = { workspace = true }
 clap = { workspace = true }
 ethers = { workspace = true }
