--- a/rollups-node/machine-runner/Cargo.toml
+++ b/rollups-node/machine-runner/Cargo.toml
@@ -10,7 +10,7 @@ readme.workspace = true
 repository.workspace = true
 
 [dependencies]
-cartesi-compute-core = { workspace = true }
+cartesi-prt-core = { workspace = true }
 cartesi-machine = { workspace = true }
 rollups-state-manager = { workspace = true }
 
