--- a/common-rs/merkle/Cargo.toml
+++ b/common-rs/merkle/Cargo.toml
@@ -11,7 +11,7 @@ readme = { workspace = true }
 repository = { workspace = true }
 
 [dependencies]
-hex = "0.4.3"
-sha3 = "0.10.8"
-thiserror = "1.0.50"
-
+hex = "0.4"
+ruint = "1.12"
+sha3 = "0.10"
+thiserror = "1.0"
